fixed anchor spacing

--- a/style.css
+++ b/style.css
@@ -37,7 +37,8 @@ img {
 
 .container {
     max-width: 1440px;
-    margin: 0 auto;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .flex {
@@ -57,6 +58,11 @@ img {
 .img-container img{
     width: 100%;
     height: 100%;
+}
+
+.anchor {
+    width: 100%;
+    height: 25vh;
 }
 
 /* NAVBAR */
@@ -309,10 +315,15 @@ img {
     }
 }
 
-/* ANCHORS */
+/* FOOTER */
 
-.anchor {
+footer {
     width: 100%;
-    position: relative;
-    height: 20vh;
+    display:inline-block;
+    border-top: 1px solid black;
+    height: 100px;
+}
+
+footer p {
+    text-align: center;
 }
